# shiromino

./: .gitignore  CMakeLists.txt  README-VITA.md  README.md  game.cfg
src/: audio.cpp  core.cpp  debug.cpp  debug.h  file_io.cpp  game_menu.cpp  game_menu.h  game_qs.cpp  game_qs.h  gfx.cpp  gfx.h  gfx_menu.cpp  main.cpp  replay.cpp  scores.cpp  sqlite3.h
